# libintegrin

./: .gitmodules  CMakeLists.txt  client-testsuite.cpp
client/: CMakeLists.txt  client-common.cpp  client-common.h
client/backends/: backend-config.h
client/backends/qt/: CMakeLists.txt  connection.cpp  connectionprivate.cpp  connectionprivate.h  room.cpp  room.h
client/backends/qt/events/: event.cpp  event.h
client/backends/qt/jobs/: basejob.cpp  syncjob.cpp
client/tests/: client-testsuite.cpp
common/: common.h  test-util.h
